# bela

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
api/: tasks.py  urls.py
api/migrations/: 0001_initial.py
api/serializers/: __init__.py  item_serializer.py
api/views/: __init__.py  items_view.py
config/: celery.py  settings.py  urls.py
